# agent-skill-poc

./: .env.example  .gitignore  README.md  demo.db  pyproject.toml  seed_db.py  solis-poc-spec.md
architecture/: ARCHITECTURE_REVIEW.md  workspace.dsl
disabled-skills/oncall-briefing/: SKILL.md  runtime.config.json
disabled-skills/publish-cost-report/: SKILL.md
frontend/: index.html
infra/: README.md
infra/agent-gateway/: config.yaml  docker-compose.yml
infra/litellm/: .env.example  docker-compose.yml  litellm-config.yaml  sample.config.json
infra/litellm/scripts/: cleanup-teams.sh  setup-teams.sh
mock-agents/: agent_common.py  cost_api.py  data_agent.py  delivery_agent.py  discord_notifier.py  employee_lookup.py  ops_agent.py  security_agent.py
runtime/: agent.py  api.py  event_bus.py  main.py  scheduler.py  skill_executor.py  skill_loader.py
scripts/: start-agents.sh  start-tools.sh
skills/chat/: SKILL.md  runtime.config.json
skills/cost-anomaly/: SKILL.md
skills/cost-report/: SKILL.md
skills/cross-agent/: SKILL.md  runtime.config.json
skills/data-access-monitor/: SKILL.md  runtime.config.json
skills/data-access-review/: SKILL.md  runtime.config.json
skills/incident-correlation/: SKILL.md  runtime.config.json
skills/morning-briefing/: SKILL.md  runtime.config.json
skills/security-escalation/: SKILL.md  runtime.config.json
skills/security-monitor/: SKILL.md  runtime.config.json
skills/service-incident-response/: SKILL.md  runtime.config.json
